--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -160,7 +160,7 @@ main {
 
 .academic {
 	height: 900px;
-  
+
 	.academic__container {
 		position: relative;
 		height: 100%;
@@ -180,42 +180,18 @@ main {
 			height: 900px;
 			transform: translateX(-50%);
 		}
-
-		
 	}
 }
 
-/* @keyframes pulse {
-	0% {
-		transform: scale(1);
-	}
-	20% {
-		transform: scale(1.05);
-	}
-	40% {
-		transform: scale(1);
-	}
-	60% {
-		transform: scale(1);
-	}
-	80% {
-		transform: scale(1.05);
-	}
-	100% {
-		transform: scale(1);
-	}
-} */
+.experience {
+	font-size: 1.2rem;
 
-@keyframes pulse {
-	0%,
-	40%,
-	60%,
-	100% {
-		transform: scale(1);
-	}
-
-	20%,
-	80% {
-		transform: scale(1.05);
+	.experience__container {
+		width: 100%;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		gap: 32px;
 	}
 }
