--- a/src/features/academic/Academic.module.css
+++ b/src/features/academic/Academic.module.css
@@ -20,8 +20,8 @@
 	display: flex;
 	flex-direction: column;
 	gap: 8px;
-	border: 1px solid var(--primary);
-	box-shadow: -8px 8px 0px var(--secondary);
+	border: 2px solid var(--primary);
+	box-shadow: -8px 8px 0px var(--boxShadow-highlight);
 	border-radius: 10px;
 	background-color: var(--whitesmoke);
 
@@ -59,7 +59,7 @@
 }
 .left .logo {
 	left: calc(50% + 30px);
-	box-shadow: -4px 4px 0px var(--secondary);
+	box-shadow: -4px 4px 0px var(--boxShadow-highlight);
 }
 .left .header {
 	.instution {
@@ -82,7 +82,7 @@
 }
 .right .logo {
 	right: calc(50% + 30px);
-	box-shadow: 4px 4px 0px var(--secondary);
+	box-shadow: 4px 4px 0px var(--boxShadow-highlight);
 }
 .right .header {
 	.instution {
