--- a/src/features/experience/ExperienceCard.module.css
+++ b/src/features/experience/ExperienceCard.module.css
@@ -13,6 +13,14 @@
 	gap: 30px;
 	background-color: var(--whitesmoke);
 	box-shadow: 0px 3px 3px var(--boxShadow);
+	transition: all 0.15s ease;
+
+	&:hover {
+		transform: translate(-2px, -4px);
+		border-top: 1px solid var(--primary);
+		border-right: 1px solid var(--primary);
+		border-bottom: 1px solid var(--primary);
+	}
 }
 
 .responsabilities-list,
@@ -37,6 +45,7 @@
 .company-image {
 	width: 110px;
 	border-radius: 50%;
+	border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .compony-info {
