--- a/src/features/project/Project.module.css
+++ b/src/features/project/Project.module.css
@@ -9,7 +9,8 @@
 
 	&:hover {
 		transform: translateY(-4px);
-		border-color: var(--primary);
+		border: 1px solid var(--primary);
+		box-shadow: 0px 5px 5px var(--boxShadow);
 	}
 }
 
@@ -47,8 +48,12 @@
 	border-radius: 8px;
 }
 
-.languages {
+.technologies-list {
 	font-size: 2rem;
+	display: flex;
+	list-style: none;
+	gap: 4px;
+  color: var(--secondary);
 }
 
 .container-links {
@@ -70,6 +75,7 @@
 
 	&:hover {
 		color: var(--primary);
+		border-color: var(--primary);
 	}
 
 	&:first-of-type {
@@ -98,3 +104,4 @@
 		transform: scale(1.05);
 	}
 }
+
