--- a/src/styles/technologies.css
+++ b/src/styles/technologies.css
@@ -73,7 +73,7 @@
 	color: var(--yellow);
 	font-size: 12px;
 	text-shadow: 1px 1px 0px black;
-	-webkit-text-stroke: 1px var(--secondary);
+	-webkit-text-stroke: 1px var(--black);
 }
 
 #react:hover {
@@ -86,6 +86,7 @@
 	border-color: rgb(204, 102, 153);
 	box-shadow: 0px 3px 0px rgb(204, 102, 153, 0.2);
 }
+
 #angular:hover {
 	color: #dd0031;
 	border-color: rgb(221, 0, 49);
@@ -143,4 +144,25 @@
 	color: #f7df1e;
 	border-color: rgb(247, 223, 30);
 	box-shadow: 0px 3px 0px rgba(247, 223, 30, 0.2);
+}
+
+/* PROJECT ICON */
+
+.icon-react {
+	color: rgb(0, 245, 212);
+}
+.icon-angular {
+	color: #dd0031;
+}
+.icon-typescript {
+	color: #3178c6;
+}
+.icon-javascript {
+	color: #f7df1e;
+}
+.icon-html {
+	color: #e34f26;
+}
+.icon-css {
+	color: #1572b6;
 }
