--- a/src/features/experience/ExperienceCard.module.css
+++ b/src/features/experience/ExperienceCard.module.css
@@ -14,6 +14,7 @@
 	background-color: var(--whitesmoke);
 	box-shadow: 0px 3px 3px var(--boxShadow);
 	transition: all 0.15s ease;
+	font-size: 1.1rem;
 
 	&:hover {
 		transform: translate(-2px, -4px);
@@ -62,6 +63,7 @@
 	font-style: italic;
 	display: flex;
 	flex-direction: column;
+	font-weight: 400;
 	gap: 4px;
 }
 
