--- a/src/features/project/Project.module.css
+++ b/src/features/project/Project.module.css
@@ -1,5 +1,5 @@
 .card {
-	background-color: whitesmoke;
+	background-color: var(--whitesmoke);
 	border-radius: 30px 0px 30px 0px;
 	overflow: hidden;
 	width: calc(50% - 20px);
@@ -28,6 +28,7 @@
 	align-items: center;
 	justify-content: center;
 	padding: 20px;
+	font-size: 1rem;
 }
 
 .content {
@@ -53,7 +54,7 @@
 	display: flex;
 	list-style: none;
 	gap: 4px;
-  color: var(--secondary);
+	color: var(--secondary);
 }
 
 .container-links {
@@ -104,4 +105,3 @@
 		transform: scale(1.05);
 	}
 }
-
