--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -38,7 +38,7 @@
 }
 
 .home__description {
-	font-size: 1.1rem;
+	font-size: 1.15rem;
 	margin-bottom: 20px;
 	line-height: 24px;
 }
@@ -50,6 +50,49 @@
 	animation: move 2.5s linear infinite;
 	box-shadow: 0px 3px 3px var(--toggle-boxShadow);
 	margin-left: auto;
+}
+
+.link-button.primary {
+	background-color: var(--primary);
+	color: var(--white);
+	position: relative;
+
+	&:hover {
+		transform: scale(1.05);
+	}
+
+	i {
+		width: 17px;
+		height: 19px;
+	}
+}
+
+.link-button.secondary {
+	background-color: var(--white);
+	color: var(--primary);
+	position: relative;
+	overflow: hidden;
+	z-index: 1;
+
+	&::before {
+		content: "";
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 0;
+		height: 100%;
+		background-color: var(--primary);
+		z-index: -1;
+		transition: all 0.5s ease;
+	}
+
+	&:hover {
+		color: var(--white);
+	}
+
+	&:hover::before {
+		width: 100%;
+	}
 }
 
 .home__icons {
