--- a/src/features/academic/Academic.module.css
+++ b/src/features/academic/Academic.module.css
@@ -112,3 +112,41 @@
 .right .period {
 	order: 2;
 }
+
+@media screen and (max-width: 600px) {
+	.group {
+		flex-direction: column-reverse;
+
+		gap: 20px;
+		align-items: center;
+	}
+
+	.right .logo,
+	.left .logo {
+		position: static;
+		top: -130px;
+		left: 50%;
+		/* transform: translateX(-50%); */
+		/* order: -1; */
+		box-shadow: 0px 4px 0px black;
+	}
+
+	.right .card,
+	.left .card {
+		position: static;
+		box-shadow: 0px 8px 0px var(--boxShadow-highlight);
+		&::before {
+			top: -30px;
+			left: 50%;
+			transform: translateX(-50%);
+		}
+	}
+
+	.status {
+		left: 50%;
+		transform: translateX(-50%);
+		width: max-content;
+
+		bottom: -16px;
+	}
+}
