--- a/src/styles/technologies.css
+++ b/src/styles/technologies.css
@@ -7,10 +7,11 @@
 	display: flex;
 	justify-content: space-between;
 	color: var(--secondary);
+	gap: 30px;
 }
 
 .technologies__description {
-	max-width: 550px;
+	max-width: 520px;
 	width: 100%;
 	display: flex;
 	flex-direction: column;
@@ -18,7 +19,7 @@
 }
 
 .technologies__subtitle {
-	font-size: 3rem;
+	font-size: 2.5rem;
 }
 
 .technologies__highlight {
@@ -33,12 +34,13 @@
 }
 
 .technologies__languages {
+	width: 100%;
 	margin-left: auto;
 	display: grid;
-	grid-template-columns: repeat(3, max-content);
-	grid-template-columns: repeat(4, max-content);
+	grid-template-columns: repeat(auto-fill, minmax(130px, 130px));
 	align-content: center;
 	gap: 20px;
+	justify-content: end;
 }
 
 .technologies__item {
@@ -63,7 +65,7 @@
 }
 
 .technologies__icon {
-	font-size: 90px;
+	font-size: 5.5rem;
 }
 
 .technologies__star {
@@ -169,4 +171,23 @@
 }
 .icon-css {
 	color: #1572b6;
+}
+
+@media screen and (max-width: 600px) {
+  
+	.technologies {
+		margin-top: 0px;
+    
+  }
+	.technologies__description {
+    width: 100%;
+    max-width: 100%;
+	}
+	.technologies__container {
+    flex-direction: column;
+	}
+	.technologies__languages {
+    grid-template-columns: repeat(auto-fill, minmax(100px, 120px));
+		justify-content: center;
+	}
 }
