--- a/src/features/academic/Academic.module.css
+++ b/src/features/academic/Academic.module.css
@@ -113,10 +113,15 @@
 	order: 2;
 }
 
+@media screen and (min-width: 600px)  and (max-width: 985px) {
+	.card {
+		max-width: 40vw;
+	}
+}
+
 @media screen and (max-width: 600px) {
 	.group {
 		flex-direction: column-reverse;
-
 		gap: 20px;
 		align-items: center;
 	}
