--- a/src/features/experience/ExperienceCard.module.css
+++ b/src/features/experience/ExperienceCard.module.css
@@ -1,4 +1,7 @@
 .card {
+	display: flex;
+	flex-direction: column;
+
 	max-width: 1000px;
 	width: 100%;
 	border-top: 1px solid var(--boxShadow);
@@ -8,8 +11,6 @@
 	border-radius: 30px 0px 30px 30px;
 	padding: 20px;
 	height: max-content;
-	display: flex;
-	flex-direction: column;
 	gap: 30px;
 	background-color: var(--whitesmoke);
 	box-shadow: 0px 3px 3px var(--boxShadow);
@@ -33,6 +34,7 @@
 	display: flex;
 	align-items: flex-start;
 	justify-content: space-between;
+  
 	padding-bottom: 16px;
 	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
@@ -58,21 +60,21 @@
 }
 
 .container-period {
-	font-size: 0.95rem;
 	display: flex;
 	justify-content: center;
 	align-items: flex-end;
-	font-style: italic;
-	display: flex;
 	flex-direction: column;
+
+	font-size: 0.95rem;
+	font-style: italic;
 	font-weight: 400;
 	gap: 4px;
 }
 
 .responsabilities-container {
 	display: flex;
-	gap: 12px;
 	flex-direction: column;
+	gap: 12px;
 }
 
 .responsabilities-list {
@@ -107,17 +109,22 @@
 	}
 }
 
+/* ######## MEDIA QUERIES ######## */
+
 @media screen and (max-width: 600px) {
 	.card {
 		border-left: 4px solid var(--primary);
 	}
+
 	.header {
 		flex-direction: column;
 		gap: 20px;
 	}
+
 	.compony-info {
 		min-width: 190px;
 	}
+
 	.container-period {
 		width: 100%;
 		flex-direction: row;
