--- a/src/features/project/Project.module.css
+++ b/src/features/project/Project.module.css
@@ -1,4 +1,7 @@
 .card {
+	display: flex;
+	flex-direction: column;
+
 	background-color: var(--whitesmoke);
 	border-radius: 30px 0px 30px 0px;
 	overflow: hidden;
@@ -6,8 +9,6 @@
 	box-shadow: 0px 3px 3px var(--boxShadow);
 	border: 1px solid var(--boxShadow);
 	transition: all 0.15s ease;
-	display: flex;
-	flex-direction: column;
 
 	&:hover {
 		transform: translateY(-4px);
@@ -27,6 +28,7 @@
 .body {
 	display: flex;
 	flex-direction: column;
+
 	align-items: center;
 	justify-content: center;
 	padding: 20px;
@@ -38,12 +40,12 @@
 .content {
 	display: flex;
 	gap: 16px;
-	text-align: center;
 }
 
 .info {
 	display: flex;
 	flex-direction: column;
+
 	align-items: center;
 	justify-content: center;
 	gap: 8px;
@@ -58,17 +60,19 @@
 }
 
 .technologies-list {
-	font-size: 2rem;
 	display: flex;
+
+	font-size: 2rem;
 	list-style: none;
 	gap: 4px;
 	color: var(--secondary);
 }
 
 .container-links {
-	width: 100%;
 	display: flex;
 	justify-content: start;
+
+	width: 100%;
 	gap: 8px;
 	margin-top: auto;
 }
@@ -115,9 +119,12 @@
 	}
 }
 
+/* ######## MEDIA QUERIES ######## */
+
 @media screen and (max-width: 1200px) {
 	.content {
 		flex-direction: column-reverse;
+		text-align: center;
 	}
 
 	.info {
@@ -128,7 +135,12 @@
 		width: 100%;
 		height: 200px;
 	}
+
+	.container-links {
+		justify-content: center;
+	}
 }
+
 @media screen and (min-width: 600px) {
 	.card {
 		min-width: 380px;
@@ -139,13 +151,12 @@
 	.card {
 		width: 100%;
 	}
+
 	.content {
 		flex-direction: column-reverse;
 	}
+
 	.image {
 		width: 100%;
-	}
-	.container-links {
-		justify-content: center;
 	}
 }
