--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,38 +1,42 @@
 .contact {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
 	background-color: var(--black);
 	padding: 30px 80px;
 	border-radius: 50px 50px 0px 0px;
 	color: var(--white);
 
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
 	gap: 32px;
 	border: 2px solid var(--primary);
 
-  margin-top: 100px;
+	margin-top: 100px;
 }
 
 .contact__form {
-	width: 100%;
-	gap: 16px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+
+	width: 100%;
+	gap: 16px;
 	gap: 32px;
 }
 
 .contact__wrapper {
-	width: 100%;
 	display: flex;
+
+	width: 100%;
 	gap: 32px;
 }
 
 .contact__group {
-	width: 100%;
 	display: flex;
 	flex-direction: column;
+
+	width: 100%;
 	gap: 8px;
 }
 
@@ -155,6 +159,8 @@
 	font-weight: 500;
 	font-size: 0.95rem;
 }
+
+/* ######## MEDIA QUERIES ######## */
 
 @media screen and (max-width: 600px) {
 	.contact {
