--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,8 +1,9 @@
 .home {
 	display: flex;
-	align-items: center;
 	flex-direction: column;
+	align-items: center;
 	justify-content: center;
+
 	height: 90vh;
 	margin-top: 30px;
 }
@@ -16,6 +17,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 8px;
+
 	width: 50%;
 	color: var(--secondary);
 }
@@ -96,12 +98,12 @@
 }
 
 .home__icons {
-	margin-top: 80px;
-	width: 100%;
 	display: flex;
 	justify-content: flex-end;
-
 	align-items: center;
+
+	margin-top: 80px;
+	width: 100%;
 	gap: 16px;
 	font-size: 1.35rem;
 }
@@ -132,10 +134,13 @@
 		transform: translateY(20px);
 	}
 }
-@media screen and (min-width: 600px) and (max-width: 985px) {
-  .home__image {
-    width: 260px;
-  }
+
+/* ######## MEDIA QUERIES ######## */
+
+@media screen and (min-width: 600px) and (max-width: 1200px) {
+	.home__image {
+		width: 260px;
+	}
 }
 
 @media screen and (max-width: 600px) {
@@ -143,25 +148,31 @@
 		margin-top: 100px;
 		height: 100vh;
 	}
+
 	.home__title {
 		font-size: 2.5rem;
 	}
+
 	.home__subtitle {
 		font-size: 2rem;
 	}
+
 	.home__container {
 		flex-direction: column-reverse;
 		gap: 80px;
 	}
+
 	.home__content {
 		width: 100%;
 		align-items: center;
 		text-align: center;
 	}
+
 	.home__icons {
 		justify-content: center;
 		margin-top: 40px;
 	}
+
 	.home__image {
 		width: 250px;
 	}
