--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -49,6 +49,7 @@
 html {
 	display: flex;
 	justify-content: center;
+
 	font-size: 16px;
 	scroll-behavior: smooth;
 	background-image: linear-gradient(var(--grade) 1px, transparent 1px),
@@ -67,15 +68,14 @@ a {
 }
 
 body {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+
 	width: 100%;
 	max-width: 1200px;
 	min-height: 100vh;
-
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: flex-start;
-	gap: 140px;
 	font-family: var(--Inter);
 	position: relative;
 
@@ -85,11 +85,12 @@ body {
 }
 
 main {
-	padding: 0px 8px;
-	margin-top: 80px;
 	display: flex;
 	flex-direction: column;
-	gap: 100px;
+
+	gap: 140px;
+	padding: 0px 8px;
+	margin-top: 80px;
 }
 
 section:not(#home) {
@@ -97,7 +98,8 @@ section:not(#home) {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	gap: 50px;
+	gap: 60px;
+
 	scroll-margin-top: 80px;
 }
 
@@ -111,14 +113,15 @@ section:not(#home) {
 }
 
 .link-button {
+	display: flex;
+	align-items: center;
+
 	font-size: 1.1rem;
 	padding: 12px 26px;
 	border-radius: 10px;
 	border: 1px solid var(--primary);
 	box-shadow: 0px 3px 1px var(--toggle-boxShadow);
 	transition: all 0.15s ease;
-	display: flex;
-	align-items: center;
 	gap: 4px;
 	cursor: pointer;
 
@@ -150,10 +153,12 @@ section:not(#home) {
 	}
 }
 
+/* ######## CONTAINERS ######## */
+
 .project__container {
 	display: flex;
 	flex-wrap: wrap;
-  justify-content: center;
+	justify-content: center;
 	gap: 40px;
 }
 
@@ -163,13 +168,13 @@ section:not(#home) {
 }
 
 .academic__container {
-	position: relative;
-	height: 100%;
-	top: 30px;
-
-	width: 100%;
 	display: flex;
 	flex-direction: column;
+
+	position: relative;
+	height: 100%;
+	top: 23px;
+	width: 100%;
 	gap: 100px;
 
 	&::before {
@@ -186,30 +191,31 @@ section:not(#home) {
 
 .experience {
 	font-size: 1.2rem;
-  margin-top: -40px;
 }
 
 .experience__container {
-	width: 100%;
 	display: flex;
-	justify-content: center;
 	flex-direction: column;
+	justify-content: center;
 	align-items: center;
-	gap: 48px;
+
+	width: 100%;
+	gap: 40px;
 }
 
 /* ######## SPINNER ######## */
 
 .loading-screen {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100vh;
 	background-color: #1a1c22;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	z-index: 9999;
 	transition: opacity 0.5s ease, visibility 0.5s ease;
 }
@@ -234,25 +240,32 @@ section:not(#home) {
 	visibility: hidden;
 }
 
+/* ######## MEDIA QUERIES ######## */
 
-
-
-@media screen and (min-width: 600px) and (max-width: 985px) {
+@media screen and (min-width: 600px) and (max-width: 1100px) {
 	html {
 		font-size: 12px;
 	}
+
 	.academic {
 		height: 1000px;
 	}
+
 	.academic__container {
-		gap: 00px;
+		gap: 0px;
 
 		&::before {
 			height: 900px;
 		}
 	}
+
 	main {
 		margin-top: 0;
+		gap: 100px;
+	}
+
+	.experience {
+		margin-top: -4.5vw;
 	}
 }
 
@@ -272,11 +285,12 @@ section:not(#home) {
 		.academic__container {
 			gap: 150px;
 			&::before {
-				height: calc(100% + 125px);
+				height: calc(100% + 100px);
 				top: -110px;
 			}
 		}
 	}
+
 	.project__container {
 		flex-direction: column;
 	}
