--- a/src/styles/technologies.css
+++ b/src/styles/technologies.css
@@ -3,18 +3,18 @@
 }
 
 .technologies__container {
-	width: 100%;
 	display: flex;
 	justify-content: space-between;
-	color: var(--secondary);
 	gap: 30px;
+	width: 100%;
+	color: var(--secondary);
 }
 
 .technologies__description {
-	max-width: 520px;
-	width: 100%;
 	display: flex;
 	flex-direction: column;
+	max-width: 520px;
+	width: 100%;
 	gap: 12px;
 }
 
@@ -44,12 +44,12 @@
 }
 
 .technologies__item {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	border: 1px solid var(--secondary);
 	padding: 12px 16px;
-	display: flex;
 	justify-content: center;
-	align-items: center;
-	flex-direction: column;
 	border-radius: 5px;
 	gap: 4px;
 	transition: all 0.15s ease;
@@ -87,6 +87,7 @@
 	border-color: rgb(0, 245, 212);
 	box-shadow: 0px 3px 0px rgb(0, 245, 212, 0.2);
 }
+
 #sass:hover {
 	color: rgb(204, 102, 153);
 	border-color: rgb(204, 102, 153);
@@ -98,6 +99,7 @@
 	border-color: rgb(221, 0, 49);
 	box-shadow: 0px 3px 0px rgba(219, 0, 49, 0.2);
 }
+
 #typescript:hover {
 	color: #3178c6;
 	border-color: rgb(49, 120, 198);
@@ -157,48 +159,62 @@
 .icon-react {
 	color: rgb(0, 245, 212);
 }
+
 .icon-angular {
 	color: #dd0031;
 }
+
 .icon-typescript {
 	color: #3178c6;
 }
+
 .icon-javascript {
 	color: #f7df1e;
 }
+
 .icon-html {
 	color: #e34f26;
 }
+
 .icon-css {
 	color: #1572b6;
 }
+
+/* ######## MEDIA QUERIES ######## */
 
 @media screen and (min-width: 600px) and (max-width: 1200px) {
 	body {
 		padding: 0px 30px;
 	}
+
 	.technologies__languages {
 		justify-content: center;
 	}
+
 	.technologies__description {
 		width: 100%;
 		max-width: 100%;
 	}
+
 	.technologies__container {
 		flex-direction: column;
 	}
 }
+
 @media screen and (max-width: 600px) {
 	.technologies {
 		margin-top: 0px;
 	}
+
 	.technologies__description {
 		width: 100%;
 		max-width: 100%;
 	}
+
 	.technologies__container {
 		flex-direction: column;
 	}
+
 	.technologies__languages {
 		grid-template-columns: repeat(auto-fill, minmax(100px, 120px));
 		justify-content: center;
