--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@font-face {
+	font-family: "Inter";
+	src: url("./../assets/fonts/Inter-VariableFont_ops.ttf") format("truetype");
+	font-weight: 100 900;
+	font-display: swap;
+	font-style: normal;
+}
 
 :root {
 	--primary: #2474fd;
