feat: implement devicon icons locally with a dynamic svg function

--- a/src/features/project/Project.module.css
+++ b/src/features/project/Project.module.css
@@ -119,6 +119,11 @@
 	}
 }
 
+.icon {
+	width: 30px;
+	height: 30px;
+}
+
 /* ######## MEDIA QUERIES ######## */
 
 @media screen and (max-width: 1200px) {
