--- a/src/features/project/Project.module.css
+++ b/src/features/project/Project.module.css
@@ -86,6 +86,10 @@
 	font-weight: bold;
 	font-size: 1.2rem;
 	transition: all 0.15s ease;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 2px;
 
 	&:hover {
 		color: var(--primary);
