--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -81,12 +81,21 @@ body > .header {
 .header__icon {
 	color: inherit;
 	cursor: pointer;
-	font-size: 1.6rem;
+	/* font-size: 1.6rem; */
 	text-shadow: 0px 3px 3px var(--boxShadow);
 	transition: all 0.15s ease;
+	background-color: transparent;
+	border: none;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.2));
+
+	width: 1.8rem;
 
 	&:hover {
-		transform: scale(1.15);
+		transform: scale(1.12);
 	}
 
 	&:active {
@@ -105,6 +114,13 @@ body > .header {
 
 .toggle-menu {
 	font-size: 2.15rem;
+	width: 40px;
+	background-color: transparent;
+	border: none;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: var(--white);
 }
 
 /* ######## MEDIA QUERIES ######## */
@@ -174,7 +190,7 @@ body > .header {
 	.header__intro {
 		width: 100%;
 		border-radius: 10px;
-		padding: 10px;
+		padding: 6px 8px;
 		background-color: var(--primary);
 
 		display: flex;
