--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -63,9 +63,9 @@
 		transform: scale(1.05);
 	}
 
-	i {
-		width: 17px;
-		height: 19px;
+	svg {
+		width: 24px;
+		height: 24px;
 	}
 }
 
@@ -100,7 +100,7 @@
 .home__icons {
 	display: flex;
 	justify-content: flex-end;
-	align-items: center;
+	align-items: flex-start;
 
 	margin-top: 80px;
 	width: 100%;
@@ -110,10 +110,12 @@
 
 .home__icon {
 	transition: all 0.15s ease;
-	padding: 4px;
+	padding: 1px;
 	border-radius: 4px;
 	cursor: pointer;
 	color: var(--secondary);
+	width: 30px;
+	height: 30px;
 
 	&:hover {
 		box-shadow: 1px 1px 2px 1px var(--toggle-boxShadow);
