--- a/src/styles/technologies.css
+++ b/src/styles/technologies.css
@@ -70,12 +70,14 @@
 
 .technologies__star {
 	position: absolute;
-	top: 4px;
-	right: 4px;
+	top: 3px;
+	right: 3px;
+	width: 14px;
 	color: var(--yellow);
-	font-size: 12px;
-	text-shadow: 1px 1px 0px black;
-	-webkit-text-stroke: 1px var(--black);
+	stroke: var(--black);
+	stroke-width: 50px;
+	stroke-linejoin: round;
+	filter: drop-shadow(0px 1px 0px black);
 }
 
 .project__strong--highlight {
