--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,9 +1,9 @@
 @font-face {
 	font-family: "Inter";
-	src: url("./../assets/fonts/Inter-VariableFont_ops.ttf") format("truetype");
+	src: url("./../assets/fonts/Inter-VariableFont_ops.woff2") format("woff2-variations");
 	font-weight: 100 900;
-	font-display: swap;
 	font-style: normal;
+	font-display: swap;
 }
 
 :root {
