--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -227,17 +227,32 @@ section:not(#home) {
 	width: 100%;
 	height: 100vh;
 	background-color: #1a1c22;
-	z-index: 9999;
+	z-index: 9998;
 	transition: opacity 0.5s ease, visibility 0.5s ease;
 }
 
+.loading-screen__image {
+	position: absolute;
+	color: var(--white);
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 9999;
+	background-color: var(--white);
+	width: 80px;
+	height: 80px;
+	object-fit: none;
+	border-radius: 50%;
+}
+
 .loading-screen__spinner {
-	width: 50px;
-	height: 50px;
-	border: 5px solid rgba(255, 255, 255, 0.1);
-	border-top-color: var(--primary);
+	width: 100px;
+	height: 100px;
+	border: 4px solid rgba(255, 255, 255, 0.1);
+	border-color: var(--primary) transparent;
 	border-radius: 50%;
 	animation: spin 1s linear infinite;
+	position: relative;
 }
 
 @keyframes spin {
